--- a/project-web-app/src/app/cryptomonnaies-list/cryptomonnaies-list.component.css
+++ b/project-web-app/src/app/cryptomonnaies-list/cryptomonnaies-list.component.css
@@ -1,9 +1,14 @@
 h1 {
-  color: rgb(0, 169, 255);
+  color: rgb(0, 195, 255);
+  text-align: center;
 }
 
 h2 {
-  color: rgb(0, 242, 186);
+  color: rgba(255, 0, 242, 0.855);
+}
+
+h3 {
+  color: rgb(0, 213, 213);
 }
 
 p {
@@ -44,7 +49,7 @@ td {
   border-collapse: collapse;
   align-items: center;
   flex: 1;
-  overflow: hidden; /* Pour cacher les éléments qui dépassent */
+  overflow: hidden;
 }
 
 .my_table th,
@@ -55,7 +60,7 @@ td {
 }
 
 .my_table tbody tr:nth-child(even) td {
-  background-color: #2c2c2c; /* Une couleur légèrement différente pour les lignes paires */
+  background-color: #2c2c2c;
 }
 
 .my_table tbody tr:hover th,
