--- a/project-web-app/src/app/app.component.css
+++ b/project-web-app/src/app/app.component.css
@@ -40,7 +40,8 @@ li a:hover {
   align-items: center;
   height: 100px;
   box-shadow: 0px 35px 60px rgba(0, 0, 0, 0.25);
-  background-color: rgb(0 126 255);
+  /*background-color: rgb(0 126 255);*/
+  background-color: black;
   border-radius: 20px;
 }
 
@@ -91,9 +92,6 @@ body {
   padding: 0;
 }
 
-/*
-footer
-*/
 .container {
   max-width: 1170px;
   margin: auto;
@@ -105,8 +103,61 @@ footer
 ul {
   list-style: none;
 }
+
+.dropdown {
+  display: inline-block;
+}
+
+.dropbtn {
+  text-decoration: none;
+  color: white;
+  display: inline-block;
+  font-size: 130%;
+  font-weight: bold;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: rgba(0, 0, 0, 0.8);
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+  border-radius: 10px;
+}
+
+.dropdown-content a {
+  color: white;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  transition: color 0.8s, font-size 0.8s;
+}
+
+.dropdown-content a:hover {
+  background-color: rgba(255, 255, 255, 0.1);
+  color: #00fff2;
+  transition: color 0.8s, font-size 0.8s;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+.header__link {
+  font-size: 20px;
+  text-transform: uppercase;
+  color: white;
+  text-decoration: none;
+  position: relative;
+}
+
+.header__link::after {
+  background: white;
+}
+
 .footer {
-  background-color: rgb(0 126 255);
+  /*background-color: rgb(0 126 255);*/
+  background-color: black;
   padding: 70px 0;
   border-radius: 40px;
 }
