--- a/project-web-app/src/app/news-list/news-list.component.css
+++ b/project-web-app/src/app/news-list/news-list.component.css
@@ -5,7 +5,16 @@
 }
 
 h1 {
-  color: rgb(0, 169, 255);
+  color: rgb(0, 195, 255);
+  text-align: center;
+}
+
+h2 {
+  color: rgba(213, 213, 213, 0.855);
+}
+
+h3 {
+  color: rgb(0, 213, 213);
 }
 
 .card-container {
@@ -27,12 +36,12 @@ h1 {
 }
 
 .card:nth-child(odd) {
-  color: rgb(31, 171, 0);
+  color: rgb(156, 156, 156);
   background-color: #101010;
 }
 
 .card:nth-child(even) {
-  color: rgb(31, 171, 0);
+  color: rgb(156, 156, 156);
   background-color: #131313;
 }
 
@@ -73,7 +82,6 @@ h1 {
   text-align: justify;
   font-size: 25px;
   font-weight: bold;
-  color: var(--text);
 }
 
 .card .content .sub-title {
