--- a/project-web-app/src/app/community-section/community-section.component.css
+++ b/project-web-app/src/app/community-section/community-section.component.css
@@ -4,7 +4,7 @@ h1 {
 }
 
 h2 {
-  color: rgba(255, 0, 242, 0.855);
+  color: rgba(0, 247, 255, 0.855);
 }
 
 h3 {
@@ -79,22 +79,6 @@ h3 {
   margin-bottom: 8px;
 }
 
-.channel {
-  margin-bottom: 10px;
-  padding: 10px;
-  cursor: pointer;
-  transition: background-color 0.3s;
-  border-radius: 5px;
-}
-
-.channel:hover {
-  background-color: #2f3136;
-}
-
-.channel.active {
-  background-color: #00b5c6;
-}
-
 .chat {
   overflow-y: auto;
 }
@@ -147,6 +131,72 @@ h3 {
 
 .input-container {
   display: flex;
+  position: relative;
+}
+
+.emoji-popup {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 5px;
+  display: flex;
+  flex-wrap: wrap;
+  z-index: 1;
+}
+
+.emoji-popup div {
+  cursor: pointer;
+  margin: 2px;
+}
+
+.emoji-section {
+  position: absolute;
+  top: -190%;
+  left: 50%;
+  background-color: #191919;
+  border: 1px solid #00c3ff;
+  border-radius: 15px;
+  padding: 10px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  max-width: 80%;
+  max-height: 150%;
+  overflow: auto;
+  z-index: 1;
+}
+
+.emoji-section div {
+  cursor: pointer;
+  margin: 5px;
+  font-size: 20px;
+}
+
+.emoji-container {
+  position: relative;
+  display: inline-block;
+}
+
+.emoji-button {
+  height: 45px;
+  width: 45px;
+  background-color: #444444;
+  border: none;
+  border-radius: 50%;
+  margin-left: 15px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 20px;
+  cursor: pointer;
+  outline: none;
+  transition: background-color 0.3s ease;
+}
+
+.emoji-button:hover {
+  background-color: #444;
 }
 
 .message-input {
@@ -173,4 +223,45 @@ h3 {
 
 .send-button:hover {
   background-color: 00b5c6;
+}
+
+.user-list {
+  overflow-y: auto;
+  height: 100%;
+}
+
+.online-users {
+  list-style-type: none;
+  padding: 0;
+}
+
+.online-users li {
+  display: flex;
+  align-items: center;
+  padding: 8px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.online-users li:hover {
+  background-color: rgba(255, 255, 255, 0.1);
+}
+
+ul {
+  margin-left: -35px;
+}
+
+.logo-container {
+  display: flex;
+  align-items: center;
+  margin-right: 30px;
+  position: relative;
+  text-align: center;
+}
+
+.logo-container img {
+  width: 40px;
+  height: 40px;
+  cursor: not-allowed;
+  margin-left: -15px;
 }
