--- a/project-web-app/src/app/app.component.html
+++ b/project-web-app/src/app/app.component.html
@@ -30,6 +30,12 @@
         alt="login"
       />
     </a>
+    <a (click)="goToSignupPage()">
+      <img
+        src="https://cdn-icons-png.flaticon.com/512/11919/11919808.png"
+        alt="login"
+      />
+    </a>
   </div>
 </header>
 
