--- a/project-web-app/src/app/signup-form/signup-form.component.css
+++ b/project-web-app/src/app/signup-form/signup-form.component.css
@@ -1,28 +1,61 @@
-form {
-  max-width: 300px;
-  margin: 0 auto;
+.signup-container {
+  background-color: rgba(44, 44, 44, 0.8);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
+  overflow: hidden;
+  max-width: 400px;
+  margin: auto;
+  margin-top: 40px;
+  margin-bottom: 40px;
+  position: relative;
+}
+
+.Signup-form {
+  padding: 20px;
+}
+
+.Signup-form h2 {
+  text-align: center;
+  color: #ffffff;
+}
+
+.input-group {
+  margin-bottom: 15px;
+}
+
+.label {
+  display: block;
+  margin-bottom: 8px;
 }
 
 label {
+  color: white;
   display: block;
-  margin-bottom: 5px;
 }
 
 input {
   width: 100%;
-  padding: 8px;
-  margin-bottom: 10px;
+  padding: 10px;
+  box-sizing: border-box;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  transition: border-color 0.3s ease;
+}
+
+input:focus {
+  border-color: rgb(0 126 255);
 }
 
 button {
-  padding: 10px;
-  background-color: #007bff;
+  background-color: rgb(0 126 255);
   color: #fff;
+  padding: 10px 15px;
   border: none;
+  border-radius: 30px;
   cursor: pointer;
+  transition: background-color 0.3s ease;
 }
 
-button:disabled {
-  background-color: #ccc;
-  cursor: not-allowed;
+button:hover {
+  background-color: rgb(0, 208, 255);
 }
