--- a/project-web-app/src/app/app.component.html
+++ b/project-web-app/src/app/app.component.html
@@ -22,6 +22,7 @@
         </li>
         <li class="header__item"><a (click)="goToAboutPage()">About</a></li>
         <li class="header__item"><a (click)="goToContactPage()">Contact</a></li>
+        <li class="header__item"><a (click)="goToProfilePage()">Profile</a></li>
       </ul>
     </nav>
     <a (click)="goToConnectPage()">
