--- a/project-web-app/src/app/connect/connect.component.html
+++ b/project-web-app/src/app/connect/connect.component.html
@@ -1,4 +1,4 @@
-<div class="login-container">
+<div *ngIf="!loggedIn; else signupFormContainer" class="login-container">
   <form class="login-form" #loginForm="ngForm" (ngSubmit)="login(loginForm)">
     <h2>Login</h2>
 
@@ -33,3 +33,28 @@
     </div>
   </form>
 </div>
+
+<ng-template #signupFormContainer>
+  <div class="login-container">
+    <form class="login-form" [formGroup]="signupForm" (ngSubmit)="onSubmit()">
+      <h2>Create Account</h2>
+
+      <div class="input-group">
+        <label for="email">Email:</label>
+        <input type="email" id="email" formControlName="email" />
+      </div>
+
+      <div class="input-group">
+        <label for="password">Password:</label>
+        <input type="password" id="password" formControlName="password" />
+      </div>
+
+      <div class="input-group">
+        <label for="name">Name:</label>
+        <input type="text" id="name" formControlName="name" />
+      </div>
+
+      <button type="submit">Signup</button>
+    </form>
+  </div>
+</ng-template>
