--- a/project-web-app/src/app/profile/profile.component.css
+++ b/project-web-app/src/app/profile/profile.component.css
@@ -3,12 +3,12 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100vh; /* Utilisez 100% de la hauteur de la vue pour centrer verticalement */
+  height: 100vh;
 }
 
 .profile-content {
   text-align: center;
-  max-width: 300px; /* Ajustez la largeur maximale selon vos besoins */
+  max-width: 300px;
 }
 
 .profile-field {
