--- a/project-web-app/src/app/connect/connect.component.html
+++ b/project-web-app/src/app/connect/connect.component.html
@@ -29,7 +29,7 @@
     <div class="options">
       <a href="#" class="forgot-password">Mot de passe oublié ?</a>
       <span class="divider">|</span>
-      <a href="#" class="no-account">Pas de compte ?</a>
+      <a class="no-account" (click)="toggleLoggedIn()">Pas de compte ?</a>
     </div>
   </form>
 </div>
