--- a/project-web-app/src/app/profile/profile.component.css
+++ b/project-web-app/src/app/profile/profile.component.css
@@ -1,21 +1,75 @@
+/* profile.component.css */
 .profile-container {
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100vh;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
+  overflow: hidden;
+  max-width: 700px;
+  margin: auto;
+  margin-top: 40px;
+  margin-bottom: 40px;
+  position: relative;
 }
 
-.profile-content {
-  text-align: center;
-  max-width: 300px;
+.menu-container,
+.content-container {
+  border-radius: 10px;
+  border: 1px solid rgb(11, 11, 11);
+  overflow: hidden;
+  background-color: rgba(44, 44, 44, 0.8);
 }
 
-.profile-field {
-  margin-bottom: 10px;
+.menu-container {
+  width: 150px;
 }
 
-.profile-field label {
+.menu {
+  color: #fff;
+}
+
+.menu-item {
+  cursor: pointer;
+  padding: 10px;
+  transition: background-color 0.3s ease;
+}
+
+.menu-item:hover {
+  background-color: rgba(255, 255, 255, 0.1);
+}
+
+.content-container {
+  flex-grow: 1;
+  margin-left: 20px;
+}
+
+.content {
+  /* Ajoutez des styles pour le contenu si nécessaire */
+}
+
+.label {
   display: block;
-  margin-bottom: 5px;
+  margin-bottom: 8px;
+  color: white;
+}
+
+input,
+select {
+  width: 100%;
+  padding: 10px;
+  box-sizing: border-box;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  transition: border-color 0.3s ease;
+}
+
+button {
+  background-color: rgb(0, 126, 255);
+  color: #fff;
+  padding: 10px 15px;
+  border: none;
+  border-radius: 30px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
 }
