--- a/project-web-app/src/app/app.component.html
+++ b/project-web-app/src/app/app.component.html
@@ -42,6 +42,8 @@
     </a>
   </div>
 </header>
+<app-notification></app-notification>
+<router-outlet></router-outlet>
 
 <router-outlet></router-outlet>
 
