--- a/project-web-app/src/app/coin-detail/coin-detail.component.html
+++ b/project-web-app/src/app/coin-detail/coin-detail.component.html
@@ -1,5 +1,4 @@
 <section class="coin-detail_page">
-
   <app-loading-spinner *ngIf="isLoading"></app-loading-spinner>
 
   <div class="content">
@@ -15,6 +14,6 @@
       <h3 [innerHTML]="coin.description"></h3>
     </div>
 
-    <app-line-chart></app-line-chart>
+    <app-cryptomonnaie-detail></app-cryptomonnaie-detail>
   </div>
 </section>
