--- a/project-web-app/src/app/cryptomonnaies-list/cryptomonnaies-list.component.html
+++ b/project-web-app/src/app/cryptomonnaies-list/cryptomonnaies-list.component.html
@@ -89,8 +89,8 @@
       <ng-container matColumnDef="actions">
         <th mat-header-cell *matHeaderCellDef>View details</th>
         <td mat-cell *matCellDef="let crypto">
-          <button (click)="showDetails(crypto)">
-            View detailsㅤ<i class="fa fa-info-circle" aria-hidden="true"></i>
+          <button (click)="showDetails(crypto)" id="detailsbutton">
+            <i class="fa fa-info-circle" aria-hidden="true"></i>
           </button>
         </td>
       </ng-container>
@@ -98,8 +98,8 @@
       <ng-container matColumnDef="addCrypto">
         <th mat-header-cell *matHeaderCellDef>Add crypto</th>
         <td mat-cell *matCellDef="let crypto">
-          <button (click)="addCrypto(crypto)">
-            Add Cryptoㅤ<i class="fa fa-plus" aria-hidden="true"></i>
+          <button (click)="addCrypto(crypto)" id="addCrypto">
+            <i class="fa fa-plus" aria-hidden="true"></i>
           </button>
         </td>
       </ng-container>
@@ -107,8 +107,8 @@
       <ng-container matColumnDef="deleteCrypto">
         <th mat-header-cell *matHeaderCellDef>Delete</th>
         <td mat-cell *matCellDef="let crypto">
-          <button (click)="deleteCrypto(crypto)">
-            delete Cryptoㅤ<i class="fa fa-plus" aria-hidden="true"></i>
+          <button (click)="deleteCrypto(crypto)" id="deletebutton">
+            <i class="fa fa-trash" aria-hidden="true"></i>
           </button>
         </td>
       </ng-container>
