added notification panel for the cryptolist

--- a/project-web-app/src/app/beandau-notification/beandau-notification.component.html
+++ b/project-web-app/src/app/beandau-notification/beandau-notification.component.html
@@ -1,4 +1,7 @@
-<!-- beandau-notification.component.html -->
-<div class="app-notification" [class.visible]="isVisible">
+<div
+  class="app-notification"
+  [class.visible]="isVisible"
+  [class.error]="isError"
+>
   {{ message }}
 </div>
